jekyll blog config

--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
@@ -42,7 +42,24 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
+exclude:
+  - .well-known/
+  - 163/
+  - bryan/
+  - gene/
+  - hide/
+  - mozilla/
+  - response-codes/
+  - scratch/
+  - twilio/
+  - wedding-demo/
+  - colors.html
+  - disabled-paste.html
+  - domineaux.html
+  - index.html
+  - blog/Gemfile
+  - blog/Gemfile.lock
+  - blog/.jekyll-cache
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
