--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -19,15 +19,18 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+email: blog@stevenavery.com
+#description: >- # this means to ignore newlines until "baseurl:"
+#  Write an awesome description for your new site here. You can edit this
+#  line in _config.yml. It will appear in your document head meta (for
+#  Google search results) and in your feed.xml site description.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: jekyllrb
+#github_username:  jekyll
+
+include:
+  - .well-known/
 
 # Build settings
 theme: minima
@@ -42,24 +45,7 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-exclude:
-  - .well-known/
-  - 163/
-  - bryan/
-  - gene/
-  - hide/
-  - mozilla/
-  - response-codes/
-  - scratch/
-  - twilio/
-  - wedding-demo/
-  - colors.html
-  - disabled-paste.html
-  - domineaux.html
-  - index.html
-  - blog/Gemfile
-  - blog/Gemfile.lock
-  - blog/.jekyll-cache
+# exclude:
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
