--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -30,7 +30,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #github_username:  jekyll
 
 include:
-  - .well-known/
+  - ../.well-known/
 
 # Build settings
 theme: minima
